--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjqSlFTziIyPqW2Ul9xj5oft7hVfFK_FM&libraries=places"></script>
     <title>Zé Delivery: Entregas de bebidas geladas a preço baixo</title>
