--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,14 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjqSlFTziIyPqW2Ul9xj5oft7hVfFK_FM&libraries=places"></script>
     <title>Zé Delivery: Entregas de bebidas geladas a preço baixo</title>
 </head>
 <body>
-    <div id="root"></div>
+    <script
+      type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_VTxMb5jE4MbgCejBawD-QiZj-AwdiBQ&libraries=places"
+    ></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>    <div id="root"></div>
 
     <script src="bundle.js"></script>
 </body>
